objects/MyObject__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Record</label>
        <type>Checkbox</type>
    </fields>
    <label>MyObject</label>
    <nameField>
        <displayFormat>MO-{00000000}</displayFormat>
        <label>MyObject</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>